# fastapi-hatch-postgresql

./: .gitignore  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml  writeitai.Dockerfile  writeitai.compose.yml
src/: app_context.py  config.py  fastapi_server.py  main.py  py_models.py
src/db/: db_connect.py
src/db/migrations/: env.py
src/db/migrations/versions/: eafac7d69325_.py
src/db/models/: __init__.py  example_model.py
src/tests/: conftest.py  test_endpoint.py
